[package]
name = "rmidi"
version = "0.1.0"
edition = "2024"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10.1"
coremidi = "0.8.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = {version = "0.62.2", features = ["Win32_Media_Audio"]}

[dependencies]
eframe = "0.33.2"
egui = "0.33.2"
env_logger = "0.11.8"
log = "0.4.29"
